--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "2.1.1",
     "@ionic/storage": "1.1.6",
     "@types/underscore": "^1.7.33",
+    "angular-calendar": "^0.4.0",
     "angular2-moment": "^1.0.0-beta.rc.1",
     "ionic-angular": "2.0.0-rc.2",
     "ionic-native": "2.2.3",
